[gd_scene load_steps=3 format=2]

[ext_resource path="res://EnemySpawner.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0167

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="CameraDetector" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraDetector"]
shape = SubResource( 1 )
[connection signal="area_entered" from="CameraDetector" to="." method="_on_CameraDetector_area_entered"]
[connection signal="area_exited" from="CameraDetector" to="." method="_on_CameraDetector_area_exited"]
